# MigrationAssistant

./: .gitignore  CMakeLists.txt  findDisk.cpp  findDisk.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  mount.cpp  mount.h  resources.qrc
pages/: mainwindow.ui
pages/diskchosePage/: diskChoosePage.cpp  diskChoosePage.h
src/: findDisk.h  mainwindow.cpp  mainwindow.h  mount.h  var.h
src/findDisk/: findDisk.cpp
